# BlueGauge

./: Cargo.toml  README.md  build.rs
libs/scalefs_windowspnp/: Cargo.toml  LICENSE  README.md
libs/scalefs_windowspnp/libs/scalefs_common/: Cargo.toml  LICENSE  README.md
libs/scalefs_windowspnp/libs/scalefs_common/src/: lib.rs  win32_utils.rs
libs/scalefs_windowspnp/libs/scalefs_primitives/: Cargo.toml  README.md
libs/scalefs_windowspnp/libs/scalefs_primitives/src/: defer_block.rs  lib.rs
libs/scalefs_windowspnp/libs/scalefs_uuid/: Cargo.toml  README.md
libs/scalefs_windowspnp/libs/scalefs_uuid/src/: lib.rs  uuid.rs
libs/scalefs_windowspnp/src/: lib.rs  pnp_device_node_info.rs  pnp_device_property_key.rs  pnp_device_property_value.rs  pnp_enumerator.rs
libs/scalefs_windowspnp/src/enums/: enumerate_option.rs  enumerate_specifier.rs  mod.rs
libs/scalefs_windowspnp/src/errors/: enumerate_error.rs  mod.rs
src/: bluetooth.rs  main.rs  systray.rs
