[package]
name = "BlueGauge"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.16.0"
image = "0.25"
tao = "0.28"

[dependencies.windows]
version = "0.58.0"
features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Storage_Streams",
]

[build-dependencies]
embed-resource = "2.4"

[profile.release]
lto = true
codegen-units = 1